--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,29 +1,40 @@
+
+
 .home {
     padding: 0 10px;
     padding-bottom: 100px;
 }
 
 .hero {
-    max-width: 600px;
+    max-width: auto;
+    height: 400px;
     margin: 80px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 30px;
+    background-image: url("../../assets/heroImage.png");
+    background-size: cover;
+    
+    background-repeat: no-repeat;
+    background-position: inherit;
 }
 
 .hero h1 {
     font-size: max(4vw, 36px);
+    color: #fffafa;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .hero p {
     width: 100%;
     max-width: 75%;
-    color: #e3e3e3;
+    color: #fffafa;
     line-height: 1.5;
     margin: 0 auto;
     text-align: center;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .hero form{
@@ -97,6 +108,9 @@
     .market-cap{
         display: none;
     }
+    .hero {
+        background-position: center;
+    }
 }
 @media (max-width : 500px){
     .table-layout div img{
@@ -108,4 +122,8 @@
     .hero form input{
         width: 100px;
     }
+    .hero {
+        background-position: center;
+    }
+    
 }
